2011-01-26  Csaba Osztrogonác  <ossy@webkit.org>

        Reviewed by Andreas Kling.

        [Qt] Fix qt_minimal build
        https://bugs.webkit.org/show_bug.cgi?id=53172

        * QtTestBrowser/locationedit.h:

2011-01-26  Mansi Mithal  <mansi.mithal@nokia.com>

        Reviewed by Antonio Gomes.

        QtTestBrowser should have a UI Setting to disable plugins
        https://bugs.webkit.org/show_bug.cgi?id=52408
        
        Added a new action item named "Disable Plugins"
        under the "Settings" menu. 

        * QtTestBrowser/launcherwindow.cpp:
        (LauncherWindow::createChrome):
        (LauncherWindow::togglePlugins):
        * QtTestBrowser/launcherwindow.h:

2011-01-25  Patrick Gansterer  <paroga@webkit.org>

        Reviewed by Adam Barth.

        Move main CMakeLists.txt into Source directory
        https://bugs.webkit.org/show_bug.cgi?id=52888

        * Scripts/webkitdirs.pm:

2011-01-25  Patrick Gansterer  <paroga@webkit.org>

        Reviewed by Eric Seidel.

        Improve label text in submit-to-ews
        https://bugs.webkit.org/show_bug.cgi?id=53130

        * QueueStatusServer/templates/submittoews.html:

2011-01-25  Mansi Mithal  <mansi.mithal@nokia.com>

        Reviewed by Antonio Gomes.

        QtTestBrowser should have a UI Settings to prevent loading images
        https://bugs.webkit.org/show_bug.cgi?id=52409
        
        Added a new action item named "DisableAutoLoadImages"
        under the "Settings" menu 

        * QtTestBrowser/launcherwindow.cpp:
        (LauncherWindow::createChrome):
        (LauncherWindow::toggleAutoLoadImages):
        * QtTestBrowser/launcherwindow.h:

2011-01-25  Dirk Pranke  <dpranke@chromium.org>

        Reviewed by Tony Chang.

        Minor bug fixes and cleanup for filesystem wrappers, port/* test
        classes, test_expectations.py. This change adds "test-win" and
        "test-mac" variants to the test port so that we can better test