@@ -1,3 +1,13 @@
+2011-01-26  Xianzhu Wang  <wangxianzhu@google.com>
+
+        Reviewed by Tony Chang.
+
+        Add '--no-timeout' option to Chromium DRT to ease debugging.
+        https://bugs.webkit.org/show_bug.cgi?id=52873
+
+        * DumpRenderTree/chromium/DumpRenderTree.cpp:
+        (main):
+
 2011-01-26  Csaba Osztrogonác  <ossy@webkit.org>
 
         Reviewed by Andreas Kling.
